fix : margin left / align the host name to the left in housingPage

--- a/kasa/src/components/Housing/Housing.scss
+++ b/kasa/src/components/Housing/Housing.scss
@@ -73,6 +73,8 @@
         justify-content: flex-end;
       }
       &__name {
+        margin-inline-end: 0.5em;
+        text-align: end;
         width: 15%;
         display: flex;
         justify-content: flex-end;
